Development Portal (2014-04-12 shi)
==============================
Fixed map height for High Vis flava
Alphabetised countries


Development Portal (2014-04-11 shi)
==============================
Added new text to descriptions
Added new text to data quality page
Added links in footer to data quality page
Added new text to Donors and Sectors pages
Added translations for new text


Development Portal (2014-04-10 shi)
==============================
Fixed translations for tongue dropdown
Fixed tables from expanding beyond width
Replaced headers in tables to compensate donor name length
Added new map view page


Development Portal (2014-04-08 shi)
==============================
No borders for last row in lists
Added translations for tongue dropdown
Added All Activities and All Publishers pages
Added Missing Projects page
Added Missing Projects icon
Minor changes in about page
Added currency to columns


Development Portal (2014-04-07 shi)
==============================
Show multiple countries for SAVi and percentages
Add numbers to lists in SAVi for easy referencing
Renamed Agents to Publishers / Source to Donor
Added High Visibility mode for all views and SAVi


Development Portal (2014-04-04 shi)
==============================
Added Sectors (Activities/Spend/Budgets) pages
Added translations for all Sector pages
Renamed "View all" and "Project title" chunks
Breadcrumbs for new sector pages


Development Portal (2014-04-03 shi)
==============================
New graphs replace old money modules
Fixed css for graphs
Graph titles are links
Replace nth-child types with classes for all tables
Donor views are now in separate pages
Added "About data" and "About data quality" links to all pages
Added new "About data quality" page
Breadcrumbs & translations for every page


Development Portal (2014-04-02 shi)
==============================
Changed Donor to Source & all instances on site
Changed description for Source title and hover states in table