@@ -319,6 +319,7 @@ table.activity td.num	{padding:10px 0; font-size:1.0em;}
 table.activity td.title	{padding:0 30px 0 0;}
 table.activity td.value	{text-align:right; padding:10px 0 10px 40px; font-size:1.0em;}
 table.activity td.count	{text-align:right; padding:10px 0 10px 40px; font-size:1.7em; line-height:1.0em;}
+table.activity td.date	{text-align:right; padding-right:0; min-width:140px; font-size:1.0em;}
 table.activity td.alert_no_iati	{text-align:center; font-size:2.0em; padding:20px 0 0 0;}
 table.activity td span	{display:block; padding:2px 0 3px 0; color:#9C8876; font-size:0.7em; line-height:1.0em;}
 table.activity a		{display:inline-block; padding:10px 20px; width:100%; color:#95B0CF;}
