@@ -47,7 +47,7 @@
 			<span>{reported_by_text}</span>
 		</a>
 	</td>
-	<td class="value" title="{table_active_date_tip_text}">{date_end}</td>
+	<td class="date" title="{table_active_date_tip_text}">{date_end}</td>
 </tr>
 
 #active_head
@@ -58,7 +58,7 @@
 			<div class="donors_peak_space view"></div>
 			<div class="donors_peak view"></div>
 	</div><div class="donors_head_title_wrap">
-			<div class="donors_head_title view" style="">
+			<div class="donors_head_title view">
 				<span class="stats_title view">{stats_active_text}</span>
 				<span class="stats_num view">{active_projects}</span>
 			</div>
