@@ -47,8 +47,8 @@
 			<span>{reported_by_text}</span>
 		</a>
 	</td>
-	<td class="value" title="{date_start_tip_text}">{date_start}</td>
-	<td class="value" title="{date_end_tip_text}">{date_end}</td>
+	<td class="date" title="{date_start_tip_text}">{date_start}</td>
+	<td class="date" title="{date_end_tip_text}">{date_end}</td>
 </tr>
 
 #missing_head
