@@ -47,7 +47,7 @@
 			<span>{reported_by_text}</span>
 		</a>
 	</td>
-	<td class="value" title="{table_active_date_tip_text}">{date_start}</td>
+	<td class="date" title="{table_active_date_tip_text}">{date_start}</td>
 </tr>
 
 #planned_head
