@@ -1,3 +1,9 @@
+Development Portal (2014-04-16 shi)
+==============================
+Refactoring table styles
+Added new date class for activity table
+
+
 Development Portal (2014-04-12 shi)
 ==============================
 Fixed map height for High Vis flava
